# dokka

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
service_api/: constants.py  models.py  settings.py  tasks.py
service_api/domain/: calculate_distance.py  get_result.py
service_api/resources/: georevers.py
service_api/services/: geo.py  utils.py
statics/uploads/: c5f4885a-3f6e-4232-9351-ee10717f52ae.csv
